--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             <li><a href="#fitur">Fitur</a></li>
             <li><a href="#kontak">Pengembang</a></li>
         </ul>
-        <a href="index.html" class="btn-cta" style="padding: 10px 22px; font-size: 11px;">BUKA PETA</a>
+        <a href="peta.html" class="btn-cta" style="padding: 10px 22px; font-size: 11px;">BUKA PETA</a>
     </nav>
 
     <section class="hero" id="hero">
@@ -241,7 +241,7 @@
             <h1 class="reveal">Peta Tematik<br>Persebaran Laundry Jatimulyo.</h1>
             <p class="reveal">Transformasi data Qgis Peta laundry menjadi visualisasi geospasial interaktif untuk mendukung pemetaan ekonomi kreatif yang akurat di wilayah Kelurahan Jatimulyo.</p>
             <div class="reveal" style="display: flex; gap: 20px; align-items: center;">
-                <a href="index.html" class="btn-cta">Jelajahi Sekarang</a>
+                <a href="peta.html" class="btn-cta">Jelajahi Sekarang</a>
                 <span style="font-size: 12px; color: #475569; font-weight: 600;">ALPHA RELEASE 1.0</span>
             </div>
         </div>
@@ -312,3 +312,4 @@
     </script>
 </body>
 </html>
+
