--- a/index.html
+++ b/index.html
@@ -3,263 +3,271 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>WebGIS Laundry | Jatimulyo</title>
+    <title>WebGIS Laundry | Jatimulyo Exclusive</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;700;800&display=swap" rel="stylesheet">
 
     <style>
         :root {
-            --primary: #064e3b; /* Deep Emerald */
-            --accent: #10b981; /* Bright Emerald */
-            --bg-body: #f0fdf4; /* Very Light Green */
-            --surface: #ffffff;
-            --text-main: #065f46;
-            --text-secondary: #475569;
-            --gradient-emerald: linear-gradient(135deg, #064e3b 0%, #059669 100%);
+            --bg-dark: #050505;
+            --bg-card: #0c0c0e;
+            --primary-purple: #8b5cf6;
+            --secondary-blue: #3b82f6;
+            --accent-cyan: #06b6d4;
+            --text-gray: #94a3b8;
+            --white: #ffffff;
+            --border-glass: rgba(255, 255, 255, 0.08);
         }
 
         body {
-            font-family: 'Inter', sans-serif;
-            background-color: var(--bg-body);
-            color: var(--text-main);
+            font-family: 'Plus Jakarta Sans', sans-serif;
+            background-color: var(--bg-dark);
+            color: var(--white);
             overflow-x: hidden;
         }
 
-        /* --- Custom Navbar --- */
+        /* Background Glow Effect ala Akademi Crypto */
+        .glow-bg {
+            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+            background: 
+                radial-gradient(circle at 10% 20%, rgba(139, 92, 246, 0.15) 0%, transparent 40%),
+                radial-gradient(circle at 90% 80%, rgba(59, 130, 246, 0.15) 0%, transparent 40%);
+            z-index: -1;
+        }
+
+        /* --- Navbar --- */
         .navbar {
-            background: rgba(255, 255, 255, 0.9);
-            backdrop-filter: blur(10px);
-            border-bottom: 2px solid #d1fae5;
-            padding: 0.8rem 0;
+            background: rgba(5, 5, 5, 0.8);
+            backdrop-filter: blur(20px);
+            border-bottom: 1px solid var(--border-glass);
+            padding: 1.2rem 0;
         }
 
         .navbar-brand {
             font-weight: 800;
-            color: var(--primary) !important;
+            font-size: 1.4rem;
             letter-spacing: -1px;
-        }
-
-        .nav-logo-circle {
-            width: 38px; height: 38px;
-            background: var(--gradient-emerald);
-            color: white;
-            border-radius: 10px;
-            display: flex; align-items: center; justify-content: center;
+            background: linear-gradient(90deg, #fff, #8b5cf6);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
         }
 
         /* --- Hero Section --- */
         .hero {
-            padding: 9rem 0 5rem;
-            background-image: radial-gradient(circle at 90% 10%, #d1fae5 0%, transparent 40%);
+            padding: 10rem 0 6rem;
+        }
+
+        .hero-badge {
+            background: rgba(139, 92, 246, 0.1);
+            color: var(--primary-purple);
+            border: 1px solid rgba(139, 92, 246, 0.3);
+            padding: 8px 20px;
+            border-radius: 100px;
+            font-size: 0.8rem;
+            font-weight: 700;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            margin-bottom: 2rem;
+            display: inline-block;
         }
 
         .hero h1 {
             font-weight: 800;
-            font-size: clamp(2.5rem, 5vw, 3.5rem);
-            line-height: 1.1;
-            color: #064e3b;
+            font-size: clamp(2.5rem, 6vw, 4.2rem);
+            line-height: 1;
             margin-bottom: 1.5rem;
+            letter-spacing: -2px;
         }
 
-        .btn-emerald {
-            background: var(--primary);
-            color: white;
-            padding: 14px 30px;
+        .hero h1 span {
+            background: linear-gradient(90deg, var(--primary-purple), var(--secondary-blue));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        .btn-crypto {
+            background: var(--white);
+            color: var(--bg-dark);
+            padding: 15px 35px;
             border-radius: 12px;
-            font-weight: 600;
+            font-weight: 700;
+            transition: 0.4s;
             border: none;
-            transition: 0.3s;
+            text-decoration: none;
         }
 
-        .btn-emerald:hover {
-            background: var(--accent);
-            transform: translateY(-3px);
-            box-shadow: 0 10px 20px rgba(16, 185, 129, 0.2);
-            color: white;
+        .btn-crypto:hover {
+            background: var(--primary-purple);
+            color: var(--white);
+            transform: translateY(-5px);
+            box-shadow: 0 20px 40px rgba(139, 92, 246, 0.3);
         }
 
-        /* --- Map Frame Style --- */
-        .map-frame-premium {
-            background: white;
-            padding: 12px;
-            border-radius: 30px;
-            box-shadow: 0 25px 50px -12px rgba(6, 78, 59, 0.15);
-            border: 1px solid #d1fae5;
+        /* --- Map Showcase --- */
+        .map-wrapper {
             position: relative;
+            background: linear-gradient(145deg, rgba(255,255,255,0.05) 0%, rgba(255,255,255,0) 100%);
+            border: 1px solid var(--border-glass);
+            border-radius: 30px;
+            padding: 15px;
+            box-shadow: 0 40px 80px rgba(0,0,0,0.5);
         }
 
-        .map-frame-premium img {
+        .map-wrapper img {
             border-radius: 20px;
             width: 100%;
-            transition: 0.5s;
+            filter: contrast(1.1);
         }
 
-        /* --- Legend Custom --- */
-        .legend-pill {
-            background: white;
-            border: 1px solid #d1fae5;
-            padding: 8px 16px;
-            border-radius: 50px;
-            font-size: 0.85rem;
-            font-weight: 600;
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            box-shadow: 0 4px 6px -1px rgba(0,0,0,0.05);
-        }
-
-        .symbol-box { width: 14px; height: 14px; border-radius: 3px; }
-
-        /* --- Feature Section --- */
-        .card-feature {
-            background: white;
-            border: none;
+        /* --- Feature Card --- */
+        .card-crypto {
+            background: var(--bg-card);
+            border: 1px solid var(--border-glass);
             border-radius: 24px;
-            padding: 30px;
-            transition: 0.3s;
-            border-bottom: 4px solid transparent;
+            padding: 40px;
+            height: 100%;
+            transition: 0.4s;
         }
 
-        .card-feature:hover {
+        .card-crypto:hover {
+            border-color: var(--primary-purple);
             transform: translateY(-10px);
-            border-bottom: 4px solid var(--accent);
-            box-shadow: 0 20px 40px rgba(0,0,0,0.05);
+            background: linear-gradient(145deg, #0c0c0e 0%, #151518 100%);
+        }
+
+        .icon-box {
+            width: 60px; height: 60px;
+            background: rgba(139, 92, 246, 0.1);
+            border-radius: 15px;
+            display: flex; align-items: center; justify-content: center;
+            color: var(--primary-purple);
+            font-size: 1.8rem;
+            margin-bottom: 2rem;
+        }
+
+        /* --- Legend --- */
+        .legend-grid {
+            display: flex; flex-wrap: wrap; justify-content: center; gap: 12px; margin-top: 3rem;
+        }
+
+        .legend-tag {
+            background: rgba(255,255,255,0.03);
+            border: 1px solid var(--border-glass);
+            padding: 10px 20px;
+            border-radius: 100px;
+            font-size: 0.8rem;
+            font-weight: 600;
+            color: var(--text-gray);
         }
 
         /* --- Footer --- */
         footer {
-            background: #064e3b;
-            color: #ecfdf5;
-            padding: 4rem 0 2rem;
-            border-radius: 50px 50px 0 0;
+            padding: 5rem 0 3rem;
+            border-top: 1px solid var(--border-glass);
+            margin-top: 8rem;
         }
+
+        .dev-badge {
+            background: #111;
+            padding: 20px;
+            border-radius: 20px;
+            border: 1px solid var(--border-glass);
+        }
+
     </style>
 </head>
 <body>
 
+<div class="glow-bg"></div>
+
 <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container">
-        <a class="navbar-brand d-flex align-items-center gap-2" href="#">
-            <div class="nav-logo-circle">
-                <i class="bi bi-droplet-fill"></i>
-            </div>
-            <span>GEO<span class="text-success">LAUNDRY</span></span>
-        </a>
+        <a class="navbar-brand" href="#">SIG.LAUNDRY</a>
+        <div class="d-flex align-items-center gap-3">
+            <span class="d-none d-md-block text-gray small fw-bold">FAHMI FAREZY</span>
+            <a href="peta.html" class="btn btn-sm btn-light rounded-pill px-4 fw-bold">LAUNCH MAP</a>
+        </div>
     </div>
 </nav>
 
 <section class="hero">
     <div class="container">
         <div class="row align-items-center g-5">
-            <div class="col-lg-6" data-aos="fade-up">
-                <span class="badge bg-success bg-opacity-10 text-success px-3 py-2 rounded-pill mb-3 fw-bold">
-                    <i class="bi bi-geo-alt me-1"></i> Kelurahan Jatimulyo, Malang
-                </span>
-                <h1>Sistem Informasi Geografis Jasa Laundry</h1>
-                <p class="lead text-secondary mb-5">
-                    Visualisasi titik distribusi jasa laundry untuk mempermudah analisis jangkauan layanan dan aksesibilitas bagi warga Jatimulyo.
+            <div class="col-lg-6" data-aos="fade-right">
+                <div class="hero-badge">Jatimulyo Geospasial Dashboard</div>
+                <h1>Explorasi Data <span>Laundry</span> Secara Presisi.</h1>
+                <p class="lead text-gray mb-5">
+                    Platform analisis spasial modern untuk pemetaan ekosistem jasa laundry di Kelurahan Jatimulyo. Menggunakan integrasi teknologi Qgis & WebGIS.
                 </p>
-                
-                <div class="d-flex flex-wrap gap-3">
-                    <a href="peta.html" class="btn btn-emerald btn-lg">
-                        <i class="bi bi-compass me-2"></i>Buka Peta Interaktif
-                    </a>
-                </div>
-
-                <div class="mt-5 d-flex gap-4 align-items-center border-start border-4 border-success ps-4">
-                    <div>
-                        <h4 class="fw-bold mb-0">Project 2026</h4>
-                        <small class="text-muted">Fahmi Fahrezy - 23201153</small>
-                    </div>
+                <div class="d-flex gap-3">
+                    <a href="peta.html" class="btn-crypto">Explore Map Now</a>
                 </div>
             </div>
             
-            <div class="col-lg-6" data-aos="zoom-in">
-                <div class="map-frame-premium">
-                    <img src="Layout Peta Tematik Persebaran Laundry di Kelurahan Jatimulyo.png" alt="Layout Peta Laundry">
+            <div class="col-lg-6" data-aos="fade-left">
+                <div class="map-wrapper">
+                    <img src="Layout Peta Tematik Persebaran Laundry di Kelurahan Jatimulyo.png" alt="Peta Laundry">
                 </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="py-5" id="peta-preview">
-    <div class="container py-5">
-        <div class="text-center mb-5" data-aos="fade-up">
-            <h2 class="fw-bold">Pratinjau Layout Peta</h2>
-            <p class="text-secondary">Informasi spasial statis dalam format standar kartografi.</p>
-        </div>
-
-        <div class="row justify-content-center">
-            <div class="col-lg-10" data-aos="fade-up">
-                <div class="map-frame-premium overflow-hidden">
-                    <iframe src="peta.html" style="width: 100%; height: 500px; border: none; border-radius: 15px;"></iframe>
-                </div>
-            </div>
-        </div>
-
-        <div class="mt-5">
-            <div class="d-flex flex-wrap justify-content-center gap-3" data-aos="fade-up">
-                <div class="legend-pill"><span class="symbol-box" style="background: #ef4444;"></span> Titik Laundry</div>
-                <div class="legend-pill"><span class="symbol-box" style="background: #fbbf24;"></span> Jalan Raya</div>
-                <div class="legend-pill"><span class="symbol-box" style="background: #3b82f6;"></span> Sungai / Perairan</div>
-                <div class="legend-pill"><span class="symbol-box" style="background: #10b981;"></span> Area Jatimulyo</div>
-                <div class="legend-pill"><span class="symbol-box" style="background: #94a3b8;"></span> Pemukiman</div>
             </div>
         </div>
     </div>
 </section>
 
 <section class="py-5">
-    <div class="container">
+    <div class="container py-5">
         <div class="row g-4">
             <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
-                <div class="card-feature">
-                    <div class="fs-1 text-success mb-3"><i class="bi bi-layers"></i></div>
-                    <h5 class="fw-bold">Multi-Layer</h5>
-                    <p class="text-muted mb-0">Dilengkapi dengan berbagai lapisan data mulai dari batas wilayah hingga jaringan jalan.</p>
+                <div class="card-crypto">
+                    <div class="icon-box"><i class="bi bi-cpu"></i></div>
+                    <h4 class="fw-bold">Data Precision</h4>
+                    <p class="text-gray">Akurasi data lokasi yang divalidasi menggunakan koordinat riil di lapangan.</p>
                 </div>
             </div>
             <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
-                <div class="card-feature">
-                    <div class="fs-1 text-success mb-3"><i class="bi bi-cursor"></i></div>
-                    <h5 class="fw-bold">Interaktif</h5>
-                    <p class="text-muted mb-0">Klik pada marker untuk melihat informasi detail mengenai nama dan lokasi laundry.</p>
+                <div class="card-crypto">
+                    <div class="icon-box"><i class="bi bi-layers"></i></div>
+                    <h4 class="fw-bold">Thematic Layers</h4>
+                    <p class="text-gray">Visualisasi berbagai layer informasi mulai dari jaringan jalan hingga batas pemukiman.</p>
                 </div>
             </div>
             <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
-                <div class="card-feature">
-                    <div class="fs-1 text-success mb-3"><i class="bi bi-shield-check"></i></div>
-                    <h5 class="fw-bold">Data Akurat</h5>
-                    <p class="text-muted mb-0">Titik koordinat diambil berdasarkan data survey lapangan dan validasi Google Maps.</p>
+                <div class="card-crypto">
+                    <div class="icon-box"><i class="bi bi-lightning"></i></div>
+                    <h4 class="fw-bold">Fast Access</h4>
+                    <p class="text-gray">Performa sistem yang ringan dan responsif untuk diakses melalui perangkat mobile.</p>
                 </div>
             </div>
+        </div>
+
+        <div class="legend-grid" data-aos="zoom-in">
+            <div class="legend-tag"><i class="bi bi-circle-fill text-danger me-2"></i> Titik Laundry</div>
+            <div class="legend-tag"><i class="bi bi-slash-lg text-warning me-2"></i> Jalan Provinsi</div>
+            <div class="legend-tag"><i class="bi bi-slash-lg text-info me-2"></i> Perairan</div>
+            <div class="legend-tag"><i class="bi bi-square-fill text-success me-2"></i> Area Jatimulyo</div>
+            <div class="legend-tag"><i class="bi bi-square-fill text-secondary me-2"></i> Pemukiman</div>
         </div>
     </div>
 </section>
 
 <footer>
-    <div class="container">
-        <div class="row g-4">
-            <div class="col-lg-6">
-                <h4 class="fw-bold text-white mb-3">GeoLaundry Jatimulyo</h4>
-                <p class="opacity-75" style="max-width: 400px;">
-                    Portal pemetaan digital untuk mendukung kemudahan akses jasa UMKM di wilayah Kelurahan Jatimulyo, Kecamatan Lowokwaru, Kota Malang.
-                </p>
-            </div>
-            <div class="col-lg-6 text-lg-end">
-                <div class="p-4 bg-white bg-opacity-10 rounded-4 d-inline-block text-start">
-                    <h6 class="fw-bold text-white"><i class="bi bi-person-circle me-2"></i>Pengembang Sistem</h6>
-                    <p class="mb-0">Fahmi Fahrezy</p>
-                    <small class="opacity-50">Sistem Informasi • Institut ASIA Malang</small>
+    <div class="container text-center">
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
+                <h2 class="fw-bold mb-4">Developed by Experts</h2>
+                <div class="dev-badge d-inline-flex align-items-center gap-3">
+                    <div style="width: 50px; height: 50px; background: var(--primary-purple); border-radius: 50%; display: flex; align-items: center; justify-content: center;">
+                        <i class="bi bi-person-fill fs-4"></i>
+                    </div>
+                    <div class="text-start">
+                        <h6 class="mb-0 fw-bold">FAHMI FAREZY</h6>
+                        <small class="text-gray">23201153 • Institut ASIA Malang</small>
+                    </div>
                 </div>
+                <p class="mt-5 text-gray small">&copy; 2026 GEOLAYER PROJECT. ALL RIGHTS RESERVED.</p>
             </div>
-        </div>
-        <div class="border-top border-white border-opacity-10 mt-5 pt-4 text-center">
-            <p class="small opacity-50">&copy; 2026 WebGIS Project. All rights reserved.</p>
         </div>
     </div>
 </footer>
@@ -267,7 +275,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
-    AOS.init({ once: true, duration: 1000 });
+    AOS.init({ duration: 1000, once: true });
 </script>
 
 </body>
