--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <a class="navbar-brand" href="#">SIG.LAUNDRY</a>
         <div class="d-flex align-items-center gap-3">
             <span class="d-none d-md-block text-gray small fw-bold">FAHMI FAREZY</span>
-            <a href="index.html" target="_blank" class="btn btn-sm btn-light rounded-pill px-4 fw-bold">FULL SCREEN MAP</a>
+            <a href="peta.html" target="_blank" class="btn btn-sm btn-light rounded-pill px-4 fw-bold">FULL SCREEN MAP</a>
         </div>
     </div>
 </nav>
@@ -185,7 +185,7 @@
             
             <div class="col-lg-7" data-aos="fade-left">
                 <div class="map-container-wrapper">
-                    <iframe src="index.html" class="map-iframe" title="Peta Interaktif"></iframe>
+                    <iframe src="peta.html" class="map-iframe" title="Peta Interaktif"></iframe>
                 </div>
             </div>
         </div>
@@ -256,3 +256,4 @@
 
 </body>
 </html>
+
