--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             
             <div class="col-lg-7" data-aos="fade-left">
                 <div class="map-container-wrapper">
-                    <iframe src="peta.html" class="map-iframe" title="Peta Interaktif"></iframe>
+                    <iframe src="Layout Peta Tematik Persebaran Laundry di Kelurahan Jatimulyo.png" class="map-iframe" title="Peta Interaktif"></iframe>
                 </div>
             </div>
         </div>
@@ -256,4 +256,5 @@
 
 </body>
 </html>
+
 
